--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   },
   "dependencies": {
     "alert": "^5.0.10",
-    "autosize": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "ejs": "~2.6.1",
     "esm": "^3.2.25",
     "express": "~4.16.1",
+    "geoip-lite": "^1.4.5",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
+    "querystring": "^0.2.1",
     "sqlite3": "^5.0.8",
     "xhr2": "^0.2.1"
   }
