subiendo curriculum+login

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,15 @@ export KEY_PUBLIC = 'KEY_PUBLIC' //Llave publica de su google recaptcha.
 export KEY_PRIVATE = 'KEY_PRIVATE' //Llave privada de su google recaptcha.
 
 export ID_ANALYTICS = 'ID_ANALYTICS' //ID propio de google analytics.
+
+export GOOGLE_CLIENT_ID = "GOOGLE_CLIENT_ID" // ID del cliente de google auth.
+
+export GOOGLE_CLIENT_SECRET = "GOOGLE_CLIENT_SECRET" // Cliente secreto de google auth.
+
+export ADMIN_EMAIL = "ADMIN_EMAIL" // Correo para iniciar sesion.
+
+export ADMIN_PASSWORD = "ADMIN_PASSWORD" // Contraseña para iniciar sesion.
+
+export ADMIN_EMAIL_GOOGLE = "ADMIN_EMAIL_GOOGLE" // Correo usado para ingresar con google.
+
+export SECRET = "SECRET" // Secreto para cookies y sesiones.
