--- a/.env
+++ b/.env
@@ -1,9 +1,21 @@
-export EMAIL = PruebaJaviermb393@outlook.com
+EMAIL = 'PruebaJaviermb393@outlook.com'
 
-export PASS = 12-03-2003MB393
+PASS = '12-03-2003MB393'
 
-export KEY_PUBLIC = 6LcoeOofAAAAANTdyTb3jOlERCw15Kx_1CTObvF3
+KEY_PUBLIC = '6LcoeOofAAAAANTdyTb3jOlERCw15Kx_1CTObvF3'
 
-export KEY_PRIVATE = 6LcoeOofAAAAAMcTpqw9Vtq7D9Pyld5e34xXK4gX
+KEY_PRIVATE = '6LcoeOofAAAAAMcTpqw9Vtq7D9Pyld5e34xXK4gX'
 
-export ID_ANALYTICS = G-S0YQ71MXM6
+ID_ANALYTICS = 'G-S0YQ71MXM6'
+
+GOOGLE_CLIENT_ID = '1' // ID del cliente de google auth.
+
+GOOGLE_CLIENT_SECRET = '1' // Cliente secreto de google auth.
+
+ADMIN_EMAIL = '1@gmail.com' // Correo para iniciar sesion.
+
+ADMIN_PASSWORD = '1' // Contraseña para iniciar sesion.
+
+ADMIN_EMAIL_GOOGLE = '2@gmail.com' // Correo usado para ingresar con google.
+
+SECRET = '1' // Secreto para cookies y sesiones.
