--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@types/passport-google-oauth20": "^2.0.11",
     "alert": "^5.0.10",
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "ejs": "~2.6.1",
-    "esm": "^3.2.25",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "geoip-lite": "^1.4.5",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.5",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "querystring": "^0.2.1",
     "sqlite3": "^5.0.8",
     "xhr2": "^0.2.1"
